--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@500&family=STIX+Two+Text:ital,wght@0,600;1,600&family=Viga&display=swap"
         rel="stylesheet">
+    
     <!-- MY CSS LOCAL CSS STYLE SHEET -->
-    <link rel="stylesheet" href="CSS/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
 
 
 </head>
