--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         rel="stylesheet">
     
     <!-- MY CSS LOCAL CSS STYLE SHEET -->
-    <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css" type="text/css">
 
 
 </head>
