--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section>
         <div class="header">
             <h1>Valéry Hyppolite</h1>
-            <p>Solution Architech / Web Developer</p>
+            <p>Data Analyst / Web Developer</p>
         </div>
 
         <div class="flex-container">
@@ -213,7 +213,7 @@
 
     <div class="footer">
         <h2>CONTACT</h2>
-        <p>Linked-In:/in/valeryhyppolite</p>
+        <p>https://www.linkedin.com/in/valeryhyppolite/</p>
         <p>© copyright. by Valery Hyppolite.</p>
     </div>
 </body>
