--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section>
         <div class="header">
             <h1>Valéry Hyppolite</h1>
-            <p>Data Analyst / Web Developer</p>
+            <p>Solution-Architect & Web Developer</p>
         </div>
 
         <div class="flex-container">
