--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <p>Strong analytical problem-solving capabilities</p>
             <p>Problem Solving / Decision Making</p><br>
 
-            <h3>EDUCAION</h3>
+            <h3>EDUCATION</h3>
             <h5>Florida International University</h5>
             <p>Bachelor of Science (BS) in Anthropology</p>
             <h5>Miami Dade College</h5>
