--- a/index.html
+++ b/index.html
@@ -43,13 +43,7 @@
 
         <div class="aboutme">
             <h2><u>ABOUT ME</u></h2>
-            <p>Masterminded and delivered optimal systems composed of mandated services. Spearheaded
-                projects of various industries including health, marketing, finance, and technology. Specialized in
-                creating high proficient analytic dashboards and documentation on dashboard migration. Trained team
-                members on cloud infrastructure architecture. Highly experienced in problem solving, critical thinking,
-                task prioritizing, and collaborating with others. Certified in AWS Solutions Architect-Associate and
-                Developer-Associate and currently pursuing the Red Hat Certified System Administrator. Focusing on
-                projects involving full stack development, data analytics, and Linux system administration.</p>
+            <p>Self-motivated, self-taught python Programming, JavaScript, HTML & CSS. Certified in AWS Solutions Architect-Associate, Developer-Associate and currently pursuing the Red Hat Certified System Administrator. Focusing on projects involving full stack development and Linux system administration. Masterminded and delivered optimal systems composed of mandated services. Spearheaded projects of various analyses industries dashboards including health, marketing, finance, and technology. Specialized in creating and migrating high proficient analytic dashboards using AWS services. Trained team members on cloud infrastructure architecture. Highly experienced in problem solving, critical thinking, task prioritizing, and collaborating with others.</p>
         </div>
 
 
