--- a/index.html
+++ b/index.html
@@ -105,14 +105,21 @@
                     customers’
                     experience. Using AWS API Call, migrated dashboards from one AWS account to another.</p>
                 <ul>
-                    <li>Created and managed user roles and permissions using IAM.</li>
+                    <li>Created and managed user/service roles and permissions using IAM.</li>
                     <li>Upload data from on premises to AWS S3 / Migrate data to S3 using s3 sync method</li>
-                    <li>Designed and planned architectural solutions for projects.</li>
+                    <li>Evaluated change and updated source production system</li>
+                    <li>Troubleshoot error messages regarding service permissions, data format, or API calls</li>
+                    <li>Managed data storage structures, data mining, and data cleansing.</li>
+                    <li>Created catalog, workflow, and crawlers using data Glue.</li>
+                    <li>Managed tables, joined tables, and queried data using Athena, and SQL.</li>
+                    <li>Using QuickSight, joined tables, changed data format, created analyses and dashboards.</li>
+                    <li>Presented and generated reports on projects</li>
                     <li>Defined, documented, and trained others on new architectural solutions and services.
                     </li>
                     <li>Participate in customer calls to gather company needs to design high-level solution
                         projects.
                     </li>
+                    <li>
                 </ul>
             </div>
             <br>
@@ -147,6 +154,7 @@
             <br>
 
             <div>
+                <h2><u>ADDITIONAL RELEVANT EXPERIENCE</u></h2>
                 <p class="p-exp"> LINUX SYSTEM ADMINISTRATION</p>
                 <p class="p2-exp">UDEMY COURSE/SELF LEARN</p>
                 <p>Optimized Linux system by setting up and administering user and group accounts along
@@ -170,35 +178,16 @@
                     <li>Everyday use of filters and text processing commands (cut, sort, grep, awk, uniq, wc)
                     </li>
                     <li>Manage OS network (ping, ifconfig, netstat, tcpdump, networking config files)</li>
+                    <li>Work on shell scripts for CPU usage, Memory consumption and number of I/O to collect performance stats</li>
+                    <li>Provision UNIX accounts, groups, and assignment of accounts to groups</li>
+                    <li>User files permission management including assigning, adding, and updating permissions at the file and directory level</li>
+                    <li>Implementation and Integration of NTP for time synchronization (ntp and chronyd)</li>
+                    <li>Create files and directories at user and root level</li>
+                    <li>Working knowledge of virtualization (VMWare)</li>
+                    
                 </ul>
             </div>
             <br>
-
-            <div>
-                <h2><u>OTHER RELEVANT EXPERIENCE</u></h2>
-                <p class="p-exp">GASTROINTESTINAL ENDOSCOPY TECHNICIAN</p>
-                <p class="p2-exp">AVENTURA HOSPITAL | AVENTURA, FL | 11/2018 -11/2020</p>
-                <p>Supports specialized physicians by providing hands-on assistance during procedures to include
-                    Colonoscopies, Endoscopies, ERCPs, Bronchoscopies, and Enteroscopies. Prepares surgical environment
-                    and patients pre- and post-procedure. Handles and sterilizes surgical and procedural instruments.
-                    Connects and monitors EKG, blood pressure, oxygen support systems, and computer monitoring
-                    platforms.
-                </p>
-                <ul>
-                    <li>Partners with 5-person team to include doctor, nurse, technician, anesthesiologist, and
-                        anesthesiologist assistant.</li>
-                    <li>Provides exceptional healthcare services for 15 patients daily in surgical and non-surgical
-                        situations</li>
-            </div>
-            <br>
-
-            <div>
-                <p class="p-exp">PATIENT CARE ASSOCIATE</p>
-                <p class="p2-exp">MEMORIAL HOSPITAL | MIRAMAR, FL | 3/2018 TO 11/2018</p>
-                <p>Assisted patients with day-to-day routines. Measured, monitored, and recorded vital signs.
-                    Administered EKG testing. Collected patient specimens to include drawing bloodwork for lab analysis
-                    processing. Documented patient activities and trends in EMR system.</p>
-            </div>
         </div>
     </div>
     </div>
