--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
         <div class="aboutme">
-            <h2><u>ABOUT ME</u></h2>
+            <h2><u>SUMMARY</u></h2>
             <p>Self-motivated, self-taught python Programming, JavaScript, HTML & CSS. Certified in AWS Solutions Architect-Associate, Developer-Associate and currently pursuing the Red Hat Certified System Administrator. Focusing on projects involving full stack development and Linux system administration. Masterminded and delivered optimal systems composed of mandated services. Spearheaded projects of various analyses industries dashboards including health, marketing, finance, and technology. Specialized in creating and migrating high proficient analytic dashboards using AWS services. Trained team members on cloud infrastructure architecture. Highly experienced in problem solving, critical thinking, task prioritizing, and collaborating with others.</p>
         </div>
 
@@ -138,6 +138,15 @@
                     <li>Provided computer desktop support in accordance with established policies and procedures
                     </li>
                 </ul>
+                <ul>
+                    <p class="p2-exp">CONTRIBUTION<P/>
+                    <li>Researched, and created cross migration documentation which speed up the process of migrating dashboards which ultimately reduce the workload</li>
+                    <li>Created Embedded links for dashboards which made it easier for customers to view the company’s work using a simple link without the need to login
+                    </li>
+                    <li>As a scrum mater, Designed and planned architectural solutions for projects.</li>
+                    <li>Defined, documented, and trained team members on new architectural solutions and services.</li>
+                </ul>
+                  
             </div>
             <br>
 
@@ -156,7 +165,7 @@
             <div>
                 <h2><u>ADDITIONAL RELEVANT EXPERIENCE</u></h2>
                 <p class="p-exp"> LINUX SYSTEM ADMINISTRATION</p>
-                <p class="p2-exp">UDEMY COURSE/SELF LEARN</p>
+                <p class="p2-exp">UDEMY COURSE/SELF TAUGHT</p>
                 <p>Optimized Linux system by setting up and administering user and group accounts along
                     with setting
                     permissions for users and limit user account privileges by configuring sudoers. Kept
@@ -183,7 +192,7 @@
                     <li>User files permission management including assigning, adding, and updating permissions at the file and directory level</li>
                     <li>Implementation and Integration of NTP for time synchronization (ntp and chronyd)</li>
                     <li>Create files and directories at user and root level</li>
-                    <li>Working knowledge of virtualization (VMWare)</li>
+                    <li>Working knowledge of virtualization(VMWare)</li>
                     
                 </ul>
             </div>
