--- a/index.html
+++ b/index.html
@@ -119,10 +119,9 @@
                     <li>Participate in customer calls to gather company needs to design high-level solution
                         projects.
                     </li>
-                    <li>
                 </ul>
                 <ul>
-                    <p class="p2-exp">CONTRIBUTION<P/>
+                    <p class="p2-exp"><em>CONTRIBUTION</em><P/>
                     <li>Researched, and created cross migration documentation which speed up the process of migrating dashboards which ultimately reduce the workload</li>
                     <li>Created Embedded links for dashboards which made it easier for customers to view the company’s work using a simple link without the need to login
                     </li>
