--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
                     experience. Using AWS API Call, migrated dashboards from one AWS account to another.</p>
                 <ul>
                     <li>Created and managed user/service roles and permissions using IAM.</li>
-                    <li>Upload data from on premises to AWS S3 / Migrate data to S3 using s3 sync method</li>
+                    <li>Uploaded data from on premises to AWS S3 / Migrate data to S3 using s3 sync method</li>
                     <li>Evaluated change and updated source production system</li>
-                    <li>Troubleshoot error messages regarding service permissions, data format, or API calls</li>
+                    <li>Troubleshooted error messages regarding service permissions, data format, or API calls</li>
                     <li>Managed data storage structures, data mining, and data cleansing.</li>
                     <li>Created catalog, workflow, and crawlers using data Glue.</li>
                     <li>Managed tables, joined tables, and queried data using Athena, and SQL.</li>
@@ -116,12 +116,12 @@
                     <li>Presented and generated reports on projects</li>
                     <li>Defined, documented, and trained others on new architectural solutions and services.
                     </li>
-                    <li>Participate in customer calls to gather company needs to design high-level solution
+                    <li>Participated in customer calls to gather company needs to design high-level solution
                         projects.
                     </li>
                 </ul>
                 <ul>
-                    <p class="p2-exp"><em>CONTRIBUTION</em><P/>
+                    <p class="p-exp"><em>CONTRIBUTION</em><P/>
                     <li>Researched, and created cross migration documentation which speed up the process of migrating dashboards which ultimately reduce the workload</li>
                     <li>Created Embedded links for dashboards which made it easier for customers to view the company’s work using a simple link without the need to login
                     </li>
