--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
                     <li>Created and managed user/service roles and permissions using IAM.</li>
                     <li>Uploaded data from on premises to AWS S3 / Migrate data to S3 using s3 sync method</li>
                     <li>Evaluated change and updated source production system</li>
-                    <li>Troubleshooted error messages regarding service permissions, data format, or API calls</li>
+                    <li>Troubleshoot error messages regarding service permissions, data format, or API calls</li>
                     <li>Managed data storage structures, data mining, and data cleansing.</li>
                     <li>Created catalog, workflow, and crawlers using data Glue.</li>
                     <li>Managed tables, joined tables, and queried data using Athena, and SQL.</li>
-                    <li>Using QuickSight, joined tables, changed data format, created analyses and dashboards.</li>
+                    <li>Using QuickSight, joined tables, changed data format, create analyses and dashboards.</li>
                     <li>Presented and generated reports on projects</li>
                     <li>Defined, documented, and trained others on new architectural solutions and services.
                     </li>
@@ -122,8 +122,8 @@
                 </ul>
                 <ul>
                     <p class="p-exp"><em>CONTRIBUTION</em><P/>
-                    <li>Researched, and created cross migration documentation which speed up the process of migrating dashboards which ultimately reduce the workload</li>
-                    <li>Created Embedded links for dashboards which made it easier for customers to view the company’s work using a simple link without the need to login
+                    <li>Researched, and created cross migration documentation that speed up the process of migrating dashboards which ultimately reduced workload</li>
+                    <li>Created Embedded links for dashboards which made it easier for customers to view the company’s work using a simple link without the need to log in.
                     </li>
                     <li>As a scrum mater, Designed and planned architectural solutions for projects.</li>
                     <li>Defined, documented, and trained team members on new architectural solutions and services.</li>
