--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     </li>
                 </ul>
                 <ul>
-                    <p class="p-exp"><em>CONTRIBUTION</em><P/>
+                    <p class="p-contribution">CONTRIBUTION<P/>
                     <li>Researched, and created cross migration documentation that speed up the process of migrating dashboards which ultimately reduced workload</li>
                     <li>Created Embedded links for dashboards which made it easier for customers to view the company’s work using a simple link without the need to log in.
                     </li>
