--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
     <div class="footer">
         <h2>CONTACT</h2>
-        <p>https://www.linkedin.com/in/valeryhyppolite/</p>
+        <p>linkedin.com/in/valeryhyppolite/</p>
         <p>© copyright. by Valery Hyppolite.</p>
     </div>
 </body>
