--- a/index.html
+++ b/index.html
@@ -158,6 +158,15 @@
                     desktops.
                     Collaborated with department staff to market program benefits across the student population.
                 </p>
+                <ul>
+                    <li>Input and save students’ data using excel</li>
+                    <li>Kept track of students’ performance.
+                    </li>
+                    <li>Registered students for programs.</li>
+                    <li>Presented to classroom of students the available programs at MDC College.</li>
+                    <li>Answered phone calls.</li>
+                    <li>Organized events.</li>
+                </ul>
             </div>
             <br>
 
