--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <div class="aboutme">
             <h2><u>SUMMARY</u></h2>
-            <p>Self-motivated, self-taught python Programming, JavaScript, and HTML & CSS. Certified in AWS Solutions Architect-Associate, Developer-Associate and currently pursuing the Red Hat Certified System Administrator. Focusing on projects involving full stack development and Linux system administration. Masterminded and delivered optimal systems composed of mandated services. Spearheaded projects of various analyses industries dashboards including health, marketing, finance, and technology. Specialized in creating and migrating high proficient analytic dashboards using AWS services. Trained team members on cloud infrastructure architecture. Highly experienced in problem solving, critical thinking, task prioritizing, and collaborating with others.</p>
+            <p>Self-motivated, self-taught python Programming, JavaScript, and HTML & CSS. Certified in AWS Solutions Architect-Associate, Developer-Associate, and currently pursuing the Red Hat Certified System Administrator. Focusing on projects involving full-stack development and Linux system administration and machine learning. Masterminded and delivered optimal systems composed of mandated services. Spearheaded projects of various analyses industries dashboards including health, marketing, finance, and technology. Specialized in creating and migrating high proficient analytic dashboards using AWS services. Trained team members on cloud infrastructure architecture. Highly experienced in problem-solving, critical thinking, task prioritizing, and collaborating with others</p>
         </div>
 
 
@@ -97,13 +97,7 @@
                 <h2><u> IT-EXPERIENCE</u></h2>
                 <p class="p-exp">DATA ANALYST INTERN</p>
                 <p class="p2-exp">BELLEFLEUR TECHNOLOGIES | MIAMI, FL | 04/2021 -07/2021</p>
-                <p>Collect data from various sources, and utilized Excel, AWS Data Brew, AWS Glue, and Athena to
-                    prepare
-                    data. Analyzed and successfully interpreted data to identify key metrics and draw
-                    conclusions by
-                    creating dashboards using AWS QuickSight. Created dashboards embedded links to facilitate
-                    customers’
-                    experience. Using AWS API Call, migrated dashboards from one AWS account to another.</p>
+                <p>Collect data from various sources, and utilized Excel, AWS Data Brew, AWS Glue, and Athena to prepare data. Analyzed and successfully interpreted data to identify key metrics and draw conclusions by creating dashboards using AWS QuickSight. Created embedded links for dashboards to facilitate customers’ experience. Using AWS API Call and Cloud9, migrated dashboards from one AWS account to another..</p>
                 <ul>
                     <li>Created and managed user/service roles and permissions using IAM.</li>
                     <li>Uploaded data from on premises to AWS S3 / Migrate data to S3 using s3 sync method</li>
