--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
                 </ul>
                 <ul>
                     <p class="p-contribution">CONTRIBUTION<P/>
-                    <li>Researched, and created cross migration documentation that speed up the process of migrating dashboards which ultimately reduced workload</li>
-                    <li>Created Embedded links for dashboards which made it easier for customers to view the company’s work using a simple link without the need to log in.
+                    <li>Researched, and created a cross migration documentation that speeds up the process of migrating dashboards which ultimately reduced workload. By using AWS Cloud9 and API Calls, this project was successfully done.</li>
+                    <li>Created Embedded links for dashboards using AWS CloudFormation or API Gateway, Lambda, IAM, and QuickSight. This project made it easier for customers to view the company’s work using a simple link which is connected to their website.
                     </li>
                     <li>As a scrum mater, Designed and planned architectural solutions for projects.</li>
-                    <li>Defined, documented, and trained team members on new architectural solutions and services.</li>
+                    <li>Defined, documented, and trained team members on architectural solutions and services.</li>
                 </ul>
             </div>
             <br>
