--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <div class="aboutme">
             <h2><u>SUMMARY</u></h2>
-            <p>Self-motivated, self-taught python Programming, JavaScript, and HTML & CSS. Certified in AWS Solutions Architect-Associate, Developer-Associate, and currently pursuing the Red Hat Certified System Administrator. Focusing on projects involving full-stack development and Linux system administration and machine learning. Masterminded and delivered optimal systems composed of mandated services. Spearheaded projects of various analyses industries dashboards including health, marketing, finance, and technology. Specialized in creating and migrating high proficient analytic dashboards using AWS services. Trained team members on cloud infrastructure architecture. Highly experienced in problem-solving, critical thinking, task prioritizing, and collaborating with others</p>
+            <p>Self-motivated, self-taught python Programming, JavaScript, and HTML & CSS. Certified in AWS Solutions Architect-Associate, Developer-Associate, and currently pursuing the Red Hat Certified System Administrator. Focusing on projects involving full-stack development and Linux system administration and machine learning. Masterminded and delivered optimal systems composed of mandated services. Spearheaded projects of various analyses industries dashboards including health, marketing, finance, and technology. Specialized in creating and migrating high proficient analytic dashboards using AWS services. Trained team members on cloud infrastructure architecture. Highly experienced in problem-solving, critical thinking, task prioritizing, and collaborating with others.</p>
         </div>
 
 
@@ -97,18 +97,18 @@
                 <h2><u> IT-EXPERIENCE</u></h2>
                 <p class="p-exp">DATA ANALYST INTERN</p>
                 <p class="p2-exp">BELLEFLEUR TECHNOLOGIES | MIAMI, FL | 04/2021 -07/2021</p>
-                <p>Collect data from various sources, and utilized Excel, AWS Data Brew, AWS Glue, and Athena to prepare data. Analyzed and successfully interpreted data to identify key metrics and draw conclusions by creating dashboards using AWS QuickSight. Created embedded links for dashboards to facilitate customers’ experience. Using AWS API Call and Cloud9, migrated dashboards from one AWS account to another..</p>
+                <p>Collect data from various sources, and utilized Excel, AWS Data Brew, AWS Glue, and Athena to prepare data. Analyzed and successfully interpreted data to identify key metrics and draw conclusions by creating dashboards using AWS QuickSight. Created embedded links for dashboards to facilitate customers’ experience. Using AWS API Call and Cloud9, migrated dashboards from one AWS account to another.</p>
                 <ul>
-                    <li>Created and managed user/service roles and permissions using IAM.</li>
+                    <li>Created and managed user/service roles and permissions using IAM</li>
                     <li>Uploaded data from on premises to AWS S3 / Migrate data to S3 using s3 sync method</li>
                     <li>Evaluated change and updated source production system</li>
                     <li>Troubleshoot error messages regarding service permissions, data format, or API calls</li>
-                    <li>Managed data storage structures, data mining, and data cleansing.</li>
+                    <li>Managed data storage structures, data mining, and data cleansing</li>
                     <li>Created catalog, workflow, and crawlers using data Glue.</li>
-                    <li>Managed tables, joined tables, and queried data using Athena, and SQL.</li>
-                    <li>Using QuickSight, joined tables, changed data format, create analyses and dashboards.</li>
+                    <li>Managed tables, joined tables, and queried data using Athena, and SQL</li>
+                    <li>Using QuickSight, joined tables, changed data format, create analyses and dashboards</li>
                     <li>Presented and generated reports on projects</li>
-                    <li>Defined, documented, and trained others on new architectural solutions and services.
+                    <li>Defined, documented, and trained others on new architectural solutions and services
                     </li>
                     <li>Participated in customer calls to gather company needs to design high-level solution
                         projects.
@@ -116,11 +116,11 @@
                 </ul>
                 <ul>
                     <p class="p-contribution">CONTRIBUTION<P/>
-                    <li>Researched, and created a cross migration documentation that speeds up the process of migrating dashboards which ultimately reduced workload. By using AWS Cloud9 and API Calls, this project was successfully done.</li>
+                    <li>Researched, and created a cross migration documentation that speeds up the process of migrating dashboards which ultimately reduced workload. By using AWS Cloud9 and API Calls, this project was successfully done</li>
                     <li>Created Embedded links for dashboards using AWS CloudFormation or API Gateway, Lambda, IAM, and QuickSight. This project made it easier for customers to view the company’s work using a simple link which is connected to their website.
                     </li>
-                    <li>As a scrum mater, Designed and planned architectural solutions for projects.</li>
-                    <li>Defined, documented, and trained team members on architectural solutions and services.</li>
+                    <li>As a scrum mater, Designed and planned architectural solutions for projects</li>
+                    <li>Defined, documented, and trained team members on architectural solutions and services</li>
                 </ul>
             </div>
             <br>
@@ -154,12 +154,12 @@
                 </p>
                 <ul>
                     <li>Input and save students’ data using excel</li>
-                    <li>Kept track of students’ performance.
+                    <li>Kept track of students’ performance
                     </li>
-                    <li>Registered students for programs.</li>
-                    <li>Presented to classroom of students the available programs at MDC College.</li>
-                    <li>Answered phone calls.</li>
-                    <li>Organized events.</li>
+                    <li>Registered students for programs</li>
+                    <li>Presented to classroom of students the available programs at MDC College</li>
+                    <li>Answered phone calls</li>
+                    <li>Organized events</li>
                 </ul>
             </div>
             <br>
