--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div>
                 <h2><u> IT-EXPERIENCE</u></h2>
                 <p class="p-exp">CLOUD ENGINEER INTERN</p>
-                <p class="p2-exp">BELLEFLEUR TECHNOLOGIES | MIAMI, FL | 04/2021 -07/2021</p>
+                <p class="p2-exp">BELLEFLEUR TECHNOLOGIES | MIAMI, FL | 04/2021 - 07/2021</p>
                 <p>Collect data from various sources, and utilized Excel, AWS Data Brew, AWS Glue, and Athena to prepare data. Analyzed and successfully interpreted data to identify key metrics and draw conclusions by creating dashboards using AWS QuickSight. Created embedded links for dashboards to facilitate customers’ experience. Using AWS API Call and Cloud9, migrated dashboards from one AWS account to another.</p>
                 <ul>
                     <li>Created and managed user/service roles and permissions using IAM</li>
