--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
                 <p>Collect data from various sources, and utilized Excel, AWS Data Brew, AWS Glue, and Athena to prepare data. Analyzed and successfully interpreted data to identify key metrics and draw conclusions by creating dashboards using AWS QuickSight. Created embedded links for dashboards to facilitate customers’ experience. Using AWS API Call and Cloud9, migrated dashboards from one AWS account to another.</p>
                 <ul>
                     <li>Created and managed user/service roles and permissions using IAM</li>
+                    <li>Created user logins using Cognito</li>
+                    <li>Configured AWS profiles in PowerShell to switch between users and or to assume role</li>
+                    li>Debugs API call scripts</li>
                     <li>Uploaded data from on premises to AWS S3 / Migrate data to S3 using s3 sync method</li>
                     <li>Evaluated change and updated source production system</li>
                     <li>Troubleshoot error messages regarding service permissions, data format, or API calls</li>
