--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <div class="aboutme">
             <h2><u>SUMMARY</u></h2>
-            <p>Self-motivated, self-taught python Programming, JavaScript, and HTML & CSS. Certified in AWS Solutions Architect-Associate, Developer-Associate, and currently pursuing the Red Hat Certified System Administrator. Focusing on projects involving full-stack development and Linux system administration and machine learning. Masterminded and delivered optimal systems composed of mandated services. Spearheaded projects of various analyses industries dashboards including health, marketing, finance, and technology. Specialized in creating and migrating high proficient analytic dashboards using AWS services. Trained team members on cloud infrastructure architecture. Highly experienced in problem-solving, critical thinking, task prioritizing, and collaborating with others.</p>
+            <p>Highly motivated, self-starting developer seeking to lauch a career as a full-stack developer. Certified in AWS Solutions Architect-Associate, Developer-Associate, and currently pursuing the Red Hat Certified System Administrator. Focusing on projects involving full-stack development and Linux system administration and machine learning. Masterminded and delivered optimal systems composed of mandated services. Spearheaded projects of various analyses industries dashboards including health, marketing, finance, and technology. Specialized in creating and migrating high proficient analytic dashboards using AWS services. Trained team members on cloud infrastructure architecture. Highly experienced in problem-solving, critical thinking, task prioritizing, and collaborating with others.</p>
         </div>
 
 
@@ -55,8 +55,7 @@
 
             <h3>SKILLS</h3>
             <p>AWS API Calls</p>
-            <p>AWS – QuickSight / Data Brew / Glue / Athena / IAM / S3 / CloudFormation / </p>
-            <p>Lambda / Cognito / API Gateway / EC2</p>
+            <p>AWS Services</p>
             <p>Windows 7 / 8 /10</p>
             <p>Virtualization - VMware / Hyper-V</p>
             <p>Install, Maintain, and Upgrade Hardwareand Software</p><br>
@@ -64,15 +63,13 @@
             <h3>COMPETENCIES</h3>
             <p>SQL / Python / JavaScript</p>
             <p>Linux / Linux Script in Bash</p>
-            <p>Jupyter Notebook</p>
             <p>HTML / CSS / Bootstrap</p>
             <p>Active Directory / End-User Support</p>
             <p>Develop Standard Operation Procedures</p>
             <p>Troubleshooting / Problem Solving</p>
             <p>Excellent communication-Witten & Verbal</p>
-            <p>Strong analytical problem-solving capabilities</p>
-            <p>Problem Solving / Decision Making</p><br>
-
+            <p>Strong analytical problem-solving capabilities</p><br>
+            
             <h3>EDUCATION</h3>
             <h5>Florida International University</h5>
             <p>Bachelor of Science (BS) in Anthropology</p>
@@ -102,7 +99,7 @@
                     <li>Created and managed user/service roles and permissions using IAM</li>
                     <li>Created user logins using Cognito</li>
                     <li>Configured AWS profiles in PowerShell to switch between users and or to assume role</li>
-                    li>Debugs API call scripts</li>
+                    <li>Debugs API call scripts</li>
                     <li>Uploaded data from on premises to AWS S3 / Migrate data to S3 using s3 sync method</li>
                     <li>Evaluated change and updated source production system</li>
                     <li>Troubleshoot error messages regarding service permissions, data format, or API calls</li>
