--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 
         <div class="aboutme">
             <h2><u>SUMMARY</u></h2>
-            <p>Highly motivated, self-starting developer seeking to lauch a career as a full-stack developer. Certified in AWS Solutions Architect-Associate, Developer-Associate, and currently pursuing the Red Hat Certified System Administrator. Focusing on projects involving full-stack development and Linux system administration and machine learning. Masterminded and delivered optimal systems composed of mandated services. Spearheaded projects of various analyses industries dashboards including health, marketing, finance, and technology. Specialized in creating and migrating high proficient analytic dashboards using AWS services. Trained team members on cloud infrastructure architecture. Highly experienced in problem-solving, critical thinking, task prioritizing, and collaborating with others.</p>
-        </div>
+            <p>Highly motivated, self-starting developer seeking to launch a career as a full-stack developer. Certified in AWS Solutions Architect-Associate and Developer-Associate. Focusing on projects involving full-stack development and machine learning. Specialized in using AWS services to created architectural solutions. Highly experienced in problem-solving, critical thinking, task prioritizing, and collaborating with others.</p>
 
 
     </section>
@@ -97,23 +96,17 @@
                 <p>Collect data from various sources, and utilized Excel, AWS Data Brew, AWS Glue, and Athena to prepare data. Analyzed and successfully interpreted data to identify key metrics and draw conclusions by creating dashboards using AWS QuickSight. Created embedded links for dashboards to facilitate customers’ experience. Using AWS API Call and Cloud9, migrated dashboards from one AWS account to another.</p>
                 <ul>
                     <li>Created and managed user/service roles and permissions using IAM</li>
-                    <li>Created user logins using Cognito</li>
                     <li>Configured AWS profiles in PowerShell to switch between users and or to assume role</li>
-                    <li>Debugs API call scripts</li>
                     <li>Uploaded data from on premises to AWS S3 / Migrate data to S3 using s3 sync method</li>
                     <li>Evaluated change and updated source production system</li>
                     <li>Troubleshoot error messages regarding service permissions, data format, or API calls</li>
                     <li>Managed data storage structures, data mining, and data cleansing</li>
                     <li>Created catalog, workflow, and crawlers using data Glue.</li>
                     <li>Managed tables, joined tables, and queried data using Athena, and SQL</li>
-                    <li>Using QuickSight, joined tables, changed data format, create analyses and dashboards</li>
+                    <li>Using QuickSight created analysis dashboards</li>
                     <li>Presented and generated reports on projects</li>
-                    <li>Defined, documented, and trained others on new architectural solutions and services
-                    </li>
-                    <li>Participated in customer calls to gather company needs to design high-level solution
-                        projects.
-                    </li>
                 </ul>
+                
                 <ul>
                     <p class="p-contribution">CONTRIBUTION<P/>
                     <li>Researched, and created a cross migration documentation that speeds up the process of migrating dashboards which ultimately reduced workload. By using AWS Cloud9 and API Calls, this project was successfully done</li>
