--- a/index.html
+++ b/index.html
@@ -52,17 +52,21 @@
     <div class="mainrow">
         <div class="skills">
 
-            <h3>SKILLS</h3>
+            <h3>LANGUAGE & AWS SKILLS</h3>
+            <p>SQL / Python / JavaScript</p>
+            <p>jQuery / Node.js / Express.js</p>
+            <p>Linux / Linux Script in Bash</p>
+            <p>HTML / CSS / Bootstrap</p>
             <p>AWS API Calls</p>
-            <p>AWS Services</p>
-            <p>Windows 7 / 8 /10</p>
-            <p>Virtualization - VMware / Hyper-V</p>
+            <p>AWS Services</p><br>
+           
             <p>Install, Maintain, and Upgrade Hardwareand Software</p><br>
 
             <h3>COMPETENCIES</h3>
-            <p>SQL / Python / JavaScript</p>
-            <p>Linux / Linux Script in Bash</p>
-            <p>HTML / CSS / Bootstrap</p>
+            <p>Windows 7 / 8 /10</p>
+            <p>Windows 7 / 8 /10</p>
+            <p>Virtualization - VMware / Hyper-V</p>
+            <p>Install, Maintain, and Upgrade Hardwareand Software</p>
             <p>Active Directory / End-User Support</p>
             <p>Develop Standard Operation Procedures</p>
             <p>Troubleshooting / Problem Solving</p>
