--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="mainrow">
         <div class="skills">
 
-            <h3>LANGUAGE & AWS SKILLS</h3>
+            <h3>SKILLS</h3>
             <p>SQL / Python / JavaScript</p>
             <p>jQuery / Node.js / Express.js</p>
             <p>Linux / Linux Script in Bash</p>
