--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <div class="aboutme">
             <h2><u>SUMMARY</u></h2>
-            <p>Highly motivated, self-starting developer seeking to launch a career as a full-stack developer. Certified in AWS Solutions Architect-Associate and Developer-Associate. Focusing on projects involving full-stack development and machine learning. Specialized in using AWS services to created architectural solutions. Highly experienced in problem-solving, critical thinking, task prioritizing, and collaborating with others.</p>
+            <p>Highly motivated, self-starting developer seeking to launch a career in cloud computing. Certified in AWS Solutions Architect-Associate and Developer-Associate. Focusing on projects involving automation with Python and machine learning. Spearheaded projects of various analyses industries dashboards including health, marketing, finance, and technology. Specialized in creating and migrating analytic dashboards using AWS services. Highly experienced in problem-solving, critical thinking, task prioritizing, and collaborating with others.</p>
 
 
     </section>
