--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <h3>SKILLS</h3>
             <p>SQL / Python / JavaScript</p>
-            <p>jQuery / Node.js / Express.js</p>
+            <p>Node.js / Express.js</p>
             <p>Linux / Linux Script in Bash</p>
             <p>HTML / CSS / Bootstrap</p>
             <p>AWS API Calls</p>
@@ -69,6 +69,12 @@
             <p>Troubleshooting / Problem Solving</p>
             <p>Excellent communication-Witten & Verbal</p>
             <p>Strong analytical problem-solving capabilities</p><br>
+            
+            <h3>CERTIFICATIONS</h3>
+            <P>AWS Certified Developer-Associate</P>
+            <p>AWS Certified Solution Architect-Associate</p>
+            <P>AWS Certified Cloud Practitioner</P>
+            <p>Google IT Support Professional Certification </p>
             
             <h3>EDUCATION</h3>
             <h5>Florida International University</h5>
