--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <P>AWS Certified Developer-Associate</P>
             <p>AWS Certified Solution Architect-Associate</p>
             <P>AWS Certified Cloud Practitioner</P>
-            <p>Google IT Support Professional Certification </p>
+            <p>Google IT Support Professional Certification </p><br>
             
             <h3>EDUCATION</h3>
             <h5>Florida International University</h5>
